MDEV-34296 tpool - declare thread_local_waiter "static thread_local"