storage/innobase/log/log0sync.cc
@@ -186,7 +186,7 @@ void group_commit_lock::set_pending(group_commit_lock::value_type num)
 }
 
 const unsigned int MAX_SPINS = 1; /** max spins in acquire */
-thread_local group_commit_waiter_t thread_local_waiter;
+static thread_local group_commit_waiter_t thread_local_waiter;
 
 group_commit_lock::lock_return_code group_commit_lock::acquire(value_type num)
 {
